@@ -1,4 +1,4 @@
-if ![is_elf_format] then {
+if { ![is_elf_format] && ![is_pecoff_format] } then {
     return
 }
 
@@ -33,6 +33,10 @@ if  { [istarget "i*86-*-*"] || [istarget "x86_64-*-*"] } then {
 	set ASFLAGS "$ASFLAGS --32"
 	run_dump_test "cfi-i386"
 	set ASFLAGS "$old_ASFLAGS"
+    }
+
+    if { [is_pecoff_format] } then {
+	run_dump_test "reloc-pe-i386"
     }
 
 } elseif { [istarget alpha*-*-*] } then {
@@ -88,7 +92,10 @@ if { ![istarget "hppa64*-*"] } then {
   run_dump_test "cfi-common-2"
   run_dump_test "cfi-common-3"
   run_dump_test "cfi-common-4"
-  run_dump_test "cfi-common-5"
+  if { ![is_pecoff_format] } then {
+    # This test uses .subsection/.previous which are elf-specific.
+    run_dump_test "cfi-common-5"
+  }
   run_dump_test "cfi-common-7"
 }
 
